<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
>

    <TextView
            android:id="@+id/instructionMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:text="@string/instruction_message"
            android:textSize="24sp"
            android:textColor="@android:color/black"
    />

    <EditText
            android:id="@+id/statureInput"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/instructionMessage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/flame_style"
            android:inputType="number"
            android:singleLine="true"
            android:gravity="center"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toTopOf="@id/statureInput"
            app:layout_constraintRight_toLeftOf="@id/statureInput"
            android:text="@string/stature_text"
            android:textSize="17sp"
            android:textColor="@android:color/black"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@id/statureInput"
            app:layout_constraintLeft_toRightOf="@id/statureInput"
            android:text="@string/cm_text"
            android:textSize="17sp"
            android:textColor="@android:color/black"/>

    <EditText
            android:id="@+id/weightInput"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/statureInput"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/flame_style"
            android:inputType="number"
            android:singleLine="true"
            android:gravity="center"
            android:imeOptions="actionDone"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toTopOf="@id/weightInput"
            app:layout_constraintRight_toLeftOf="@id/weightInput"
            android:text="@string/weight_text"
            android:textSize="17sp"
            android:textColor="@android:color/black"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@id/weightInput"
            app:layout_constraintLeft_toRightOf="@id/weightInput"
            android:text="@string/kg_text"
            android:textSize="17sp"
            android:textColor="@android:color/black"/>

    <Button
            android:id="@+id/calculationButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/weightInput"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/orange_style"
            android:text="@string/calculation_text"
            android:textSize="21sp"
    />

    <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/calculationButton"
            android:background="@android:color/black"
    />

    <TextView
            android:id="@+id/messageLabel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/message_text1"
            android:textSize="20sp"
            android:textColor="@android:color/black"
    />
    <TextView
            android:id="@+id/messageLabel2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/messageLabel1"
            app:layout_constraintLeft_toRightOf="@id/messageLabel1"
            android:textSize="27sp"
            android:textColor="@android:color/black"
            android:gravity="center"
    />
    <TextView
            android:id="@+id/messageLabel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/messageLabel2"
            app:layout_constraintLeft_toRightOf="@id/messageLabel2"
            android:text="@string/message_text3"
            android:textSize="20sp"
            android:textColor="@android:color/black"
    />

    <EditText
            android:id="@+id/memoInput"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/messageLabel2"
            app:layout_constraintBottom_toTopOf="@id/deleteButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/flame_style"
            android:gravity="top|start"
            android:inputType="textMultiLine|text"
            android:hint="@string/hint_text"/>

    <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/memoInput"
            app:layout_constraintBottom_toBottomOf = "parent"
            android:background="@drawable/flame_style"
            android:text="@string/delete_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
    />
    <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toTopOf="@id/deleteButton"
            android:background="@drawable/orange_style"
            android:text="@string/save_text"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/deleteButton"
            app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>