<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
    >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/dayLabel"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
            />
            
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stature_label"
                        android:gravity="center_vertical"
                        android:textSize="14sp"
                />
                <TextView
                        android:id="@+id/statureLabel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textSize="13sp"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/weight_label"
                        android:gravity="center_vertical"
                        android:textSize="14sp"
                />
                <TextView
                        android:id="@+id/weightLabel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textSize="13sp"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/bmi_label"
                        android:gravity="center_vertical"
                        android:textSize="14sp"
                />
                <TextView
                        android:id="@+id/bmiLabel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textSize="13sp"
                />
            </LinearLayout>

        </LinearLayout>

        <TextView
                android:id="@+id/messageLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
